nesc-frontend/src/test/resources/integration/programs/bad/bad07/C.nc
/* Invalid type of a variable. */

unsigned long long long int very_long;

configuration C
{
}
implementation
{
}
